feat(ui,i18n): add user menu dropdown; i18n for User Center and HD images UI; adjust styles and dynamic language sync

--- a/frontend/auth-modals.html
+++ b/frontend/auth-modals.html
@@ -71,7 +71,7 @@
     <div class="user-details">
         <span class="username">用户名</span>
         <div class="user-actions">
-            <button class="btn btn-small" onclick="showUserProfile()">个人中心</button>
+<button class="btn btn-small btn-outline" onclick="showUserProfile()" data-i18n="userCenter">个人中心</button>
             <button class="btn btn-small btn-outline" onclick="authManager.logout()">登出</button>
         </div>
     </div>
