feat(user): create User Center page and move HD images UI into it; hook language + auth on user page; update nav/menu links

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -479,7 +479,7 @@
                         <span class="caret">▾</span>
                     </button>
                     <div class="user-dropdown" id="userDropdown" role="menu" aria-labelledby="userMenuToggle" style="display:none;">
-                        <a href="#" class="dropdown-item" onclick="showUserProfile()" data-i18n="userCenter">个人中心</a>
+                        <a href="/user.html" class="dropdown-item" data-i18n="userCenter">个人中心</a>
                         <a href="#" class="dropdown-item" onclick="authManager.logout()" data-i18n="logout">登出</a>
                     </div>
                 </div>
