chore(seo): set User Center (user.html) to noindex/nofollow, disallow in robots.txt; keep out of sitemap

--- a/frontend/user.html
+++ b/frontend/user.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title data-i18n="userCenter">个人中心</title>
+  <meta name="robots" content="noindex, nofollow, noarchive, nosnippet" />
+  <link rel="canonical" href="/user.html" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="/frontend/css/style.css" rel="stylesheet">
