--- a/frontend/user.html
+++ b/frontend/user.html
@@ -15,6 +15,17 @@
     .page-header { display:flex; align-items:center; justify-content:space-between; margin: 8px 0 18px; }
     .back-link { color:#00CFFF; text-decoration:none; }
     .card { background:#0f172a; border:1px solid #273548; border-radius:12px; padding:18px; }
+    /* 复用首页用户信息与下拉样式 */
+    .user-info { display:flex; align-items:center; gap:10px; padding:6px 10px; background:rgba(15,23,42,0.7); border:1px solid #273548; border-radius:999px; }
+    .user-avatar img { width:28px; height:28px; border-radius:50%; object-fit:cover; }
+    .user-details { display:flex; flex-direction:row; align-items:center; gap:10px; position:relative; }
+    .username { font-weight:600; color:#e5e7eb; font-size:0.9rem; }
+    .user-menu-toggle { background:rgba(15,23,42,0.2); color:#e5e7eb; border:1px solid #273548; border-radius:999px; padding:6px 10px; display:inline-flex; align-items:center; gap:6px; cursor:pointer; font-size:0.85rem; }
+    .user-menu-toggle:hover { background:rgba(15,23,42,0.35); }
+    .user-menu-toggle .caret { color:#aab4d4; font-size:0.8rem; }
+    .user-dropdown { position:absolute; right:0; top:calc(100% + 8px); background:#0f172a; border:1px solid #273548; border-radius:10px; min-width:160px; box-shadow:0 10px 24px rgba(0,0,0,0.35); padding:8px; z-index:1000; }
+    .dropdown-item { display:block; padding:8px 10px; color:#e5e7eb; text-decoration:none; border-radius:8px; font-size:0.9rem; white-space:nowrap; }
+    .dropdown-item:hover { background:#1f2937; }
   </style>
 </head>
 <body>
@@ -57,7 +68,32 @@
       <a class="back-link" href="/index.html">← <span data-i18n="navHome">首页</span></a>
     </div>
 
-    <div id="hd-images-ui"></div>
+    <div class="grid-two" style="display:grid;grid-template-columns:1fr 2fr;gap:18px;align-items:start;">
+      <section class="card">
+        <h2 style="margin:0 0 12px 0;" data-i18n="userAccountTitle">账户资料</h2>
+        <div id="account-info">
+          <div id="account-greeting" style="margin-bottom:10px;"></div>
+          <div style="display:grid;grid-template-columns:120px 1fr;gap:8px 12px;align-items:center;">
+            <label data-i18n="userUsername">用户名</label>
+            <input id="profile-username" type="text" style="padding:8px;border-radius:8px;border:1px solid #273548;background:#0f172a;color:#e5e7eb;" />
+            <label data-i18n="userEmail">邮箱</label>
+            <input id="profile-email" type="email" disabled style="padding:8px;border-radius:8px;border:1px solid #273548;background:#0f172a;color:#94a3b8;" />
+          </div>
+          <button id="btn-update-profile" class="btn btn-primary" style="margin-top:12px;" data-i18n="userUpdateProfile">更新资料</button>
+        </div>
+        <hr style="border-color:#273548;margin:16px 0;" />
+        <div id="change-password">
+          <h3 style="margin:0 0 10px 0;" data-i18n="userChangePasswordTitle">修改密码</h3>
+          <input id="new-password" type="password" placeholder="新密码" style="width:100%;padding:8px;border-radius:8px;border:1px solid #273548;background:#0f172a;color:#e5e7eb;margin-bottom:8px;"/>
+          <input id="confirm-password" type="password" placeholder="确认新密码" style="width:100%;padding:8px;border-radius:8px;border:1px solid #273548;background:#0f172a;color:#e5e7eb;"/>
+          <button id="btn-save-password" class="btn btn-outline" style="margin-top:12px;" data-i18n="userSave">保存</button>
+        </div>
+      </section>
+
+      <section>
+        <div id="hd-images-ui"></div>
+      </section>
+    </div>
   </div>
 
   <script src="js/i18n.js"></script>
@@ -82,7 +118,7 @@
         }
       });
 
-    // 保证用户已登录后初始化图片管理器
+    // 保证用户已登录后初始化图片管理器与账户信息
     document.addEventListener('DOMContentLoaded', () => {
       setTimeout(() => {
         if (window.authManager) {
@@ -90,9 +126,75 @@
             if (window.authManager.isLoggedIn() && window.hdImageManager) {
               window.hdImageManager.init();
             }
+            // 填充账户信息
+            const user = window.authManager.getCurrentUser?.();
+            const greetingEl = document.getElementById('account-greeting');
+            const uname = document.getElementById('profile-username');
+            const email = document.getElementById('profile-email');
+            if (user && uname && email) {
+              uname.value = user.username || '';
+              email.value = user.email || '';
+              const name = user.username || user.email || '';
+              const tpl = (getCurrentLang()==='zh'? '您好，{name}' : 'Hello, {name}');
+              if (greetingEl) greetingEl.textContent = tpl.replace('{name}', name);
+            }
           });
         }
       }, 300);
+
+      // 语言切换
+      const langSelect = document.getElementById('lang-select');
+      if (langSelect) {
+        langSelect.value = getCurrentLang();
+        langSelect.addEventListener('change', (e)=> setLanguage(e.target.value));
+      }
+
+      // 同步meta描述
+      const applyUserMeta = ()=>{
+        const lang = getCurrentLang();
+        const meta = document.querySelector('meta[name="description"]');
+        if (meta && window.i18n && window.i18n[lang] && window.i18n[lang].userMetaDescription) {
+          meta.content = window.i18n[lang].userMetaDescription;
+        }
+      };
+      applyUserMeta();
+      document.addEventListener('languageChanged', applyUserMeta);
+
+      // 用户菜单下拉
+      const userMenuToggle = document.getElementById('userMenuToggle');
+      const userDropdown = document.getElementById('userDropdown');
+      if (userMenuToggle && userDropdown) {
+        userMenuToggle.addEventListener('click', (e)=>{
+          e.stopPropagation();
+          const shown = userDropdown.style.display === 'block';
+          userDropdown.style.display = shown ? 'none' : 'block';
+          userMenuToggle.setAttribute('aria-expanded', (!shown).toString());
+        });
+        document.addEventListener('click', ()=>{
+          if (userDropdown.style.display === 'block') {
+            userDropdown.style.display = 'none';
+            userMenuToggle.setAttribute('aria-expanded', 'false');
+          }
+        });
+      }
+
+      // 保存资料按钮（演示）
+      const updateBtn = document.getElementById('btn-update-profile');
+      updateBtn?.addEventListener('click', ()=>{
+        window.authManager?.showMessage(t('userUpdateSuccess') || '更新成功', 'success');
+      });
+
+      // 修改密码（演示）
+      const savePwdBtn = document.getElementById('btn-save-password');
+      savePwdBtn?.addEventListener('click', ()=>{
+        const p1 = document.getElementById('new-password')?.value || '';
+        const p2 = document.getElementById('confirm-password')?.value || '';
+        if (p1 !== p2) {
+          window.authManager?.showMessage(t('userPasswordMismatch') || '两次输入的密码不一致', 'error');
+          return;
+        }
+        window.authManager?.showMessage(t('userFeatureComing') || '功能开发中，敬请期待', 'info');
+      });
     });
   </script>
 </body>
