fix(user): correct CSS path and layout spacing; align navbar width with site; ensure styles apply

--- a/frontend/user.html
+++ b/frontend/user.html
@@ -8,10 +8,10 @@
   <link rel="canonical" href="/user.html" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="/frontend/css/style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   <style>
     body { background: #0b1220; color: #e5e7eb; }
-    .container { max-width: 1100px; margin: 0 auto; padding: 20px; }
+    .container { max-width: 1100px; margin: 20px auto; padding: 24px 28px; }
     .page-header { display:flex; align-items:center; justify-content:space-between; margin: 8px 0 18px; }
     .back-link { color:#00CFFF; text-decoration:none; }
     .card { background:#0f172a; border:1px solid #273548; border-radius:12px; padding:18px; }
@@ -29,7 +29,7 @@
   </style>
 </head>
 <body>
-  <nav class="navbar" style="border-radius:0;">
+  <nav class="navbar" style="border-radius:0; max-width:1366px; margin:0 auto;">
     <div class="navbar-left">
       <img src="assets/logo.svg" alt="AISTONE LOGO" class="logo-img" />
       <span class="site-name">AISTONE</span>
