--- a/frontend/index.html
+++ b/frontend/index.html
@@ -839,16 +839,16 @@
     </div>
 
     <!-- 按依赖顺序加载脚本 -->
-    <script src="js/i18n.js"></script>
-    <script src="js/api_client.js" defer></script>
-    <script src="js/ui_handler.js" defer></script>
-    <script src="js/ui_enhancements.js" defer></script>
-    <script src="js/app.js" defer></script>
+    <script src="js/i18n.js?v=20250809"></script>
+    <script src="js/api_client.js?v=20250809" defer></script>
+    <script src="js/ui_handler.js?v=20250809" defer></script>
+    <script src="js/ui_enhancements.js?v=20250809" defer></script>
+    <script src="js/app.js?v=20250809" defer></script>
     <!-- 认证模态交互脚本（保证表单submit被JS接管，避免浏览器默认提交导致405） -->
-    <script src="js/auth_modals.js" defer></script>
+    <script src="js/auth_modals.js?v=20250809" defer></script>
     
     <!-- V2.0 认证和图片管理模块 -->
-    <script src="js/auth.js" defer></script>
+    <script src="js/auth.js?v=20250809" defer></script>
     
     <!-- 认证界面 -->
     <div id="auth-modals"></div>
