--- a/frontend/user.html
+++ b/frontend/user.html
@@ -96,10 +96,10 @@
     </div>
   </div>
 
-  <script src="js/i18n.js"></script>
-  <script src="js/auth_modals.js" defer></script>
-  <script src="js/auth.js" defer></script>
-  <script src="js/hd_image_manager.js" defer></script>
+  <script src="js/i18n.js?v=20250809"></script>
+  <script src="js/auth_modals.js?v=20250809" defer></script>
+  <script src="js/auth.js?v=20250809" defer></script>
+  <script src="js/hd_image_manager.js?v=20250809" defer></script>
   <div id="auth-modals"></div>
   <script>
     // 注入认证模态
