--- a/frontend/index.html
+++ b/frontend/index.html
@@ -849,6 +849,7 @@
     
     <!-- V2.0 认证和图片管理模块 -->
     <script src="js/auth.js?v=20250809" defer></script>
+    <script src="js/hd_image_manager.js?v=20250809" defer></script>
     
     <!-- 认证界面 -->
     <div id="auth-modals"></div>
