--- a/frontend/user.html
+++ b/frontend/user.html
@@ -20,7 +20,7 @@
     .user-avatar img { width:28px; height:28px; border-radius:50%; object-fit:cover; }
     .user-details { display:flex; flex-direction:row; align-items:center; gap:10px; position:relative; }
     .username { font-weight:600; color:#e5e7eb; font-size:0.9rem; }
-    .user-menu-toggle { background:rgba(36,49,77,0.6); color:#e5e7eb; border:1px solid #2A3A57; border-radius:999px; padding:6px 12px 6px 6px; display:inline-flex; align-items:center; gap:6px; cursor:pointer; font-size:0.85rem; box-shadow:0 4px 18px rgba(0,0,0,0.25); }
+    .user-menu-toggle { background:rgba(36,49,77,0.6); color:#e5e7eb; border:1px solid #2A3A57; border-radius:999px; padding:6px 12px 6px 6px; display:inline-flex; align-items:center; gap:6px; cursor:pointer; font-size:0.85rem; box-shadow:0 4px 18px rgba(0,0,0,0.25); appearance:none; -webkit-appearance:none; outline:none; background-clip:padding-box; }
     .user-menu-toggle:hover { background:rgba(36,49,77,0.85); }
     .user-menu-toggle .caret { color:#aab4d4; font-size:0.8rem; }
     .user-menu-toggle .avatar-inline { width:22px; height:22px; border-radius:50%; background:#0b1220; }
