--- a/frontend/user.html
+++ b/frontend/user.html
@@ -27,6 +27,17 @@
     .user-dropdown { position:absolute; right:0; top:calc(100% + 8px); background:#0e1424; border:1px solid #2A3A57; border-radius:10px; min-width:160px; box-shadow:0 14px 32px rgba(0,0,0,0.45); padding:8px; z-index:1000; }
     .dropdown-item { display:block; padding:8px 10px; color:#d6def8; text-decoration:none; border-radius:8px; font-size:0.9rem; white-space:nowrap; }
     .dropdown-item:hover { background:#1a2440; }
+    /* 语言选择下拉，统一胶囊深色主题 */
+    .lang-select {
+      background:#0e1424;
+      color:#d6def8;
+      border:1px solid #2A3A57;
+      border-radius:999px;
+      padding:6px 28px 6px 12px;
+      appearance:none;
+      -webkit-appearance:none;
+      outline:none;
+    }
   </style>
 </head>
 <body>
