fix(i18n,ui): localize login/logout messages; remove white frame around user info on user page; hide user-info default background/border

--- a/frontend/auth-modals.html
+++ b/frontend/auth-modals.html
@@ -218,10 +218,9 @@
     display: flex;
     align-items: center;
     gap: 12px;
-    padding: 8px 16px;
-    background-color: #f9fafb;
-    border-radius: 8px;
-    border: 1px solid #e5e7eb;
+    padding: 8px 0;
+    background: transparent;
+    border: none;
 }
 
 .user-avatar img {
