--- a/frontend/user.html
+++ b/frontend/user.html
@@ -58,7 +58,7 @@
         <option value="zh">中文</option>
       </select>
       <button class="login-btn" onclick="showModal('loginModal')" data-i18n="navLogin">登录</button>
-      <div class="user-info" style="display:none;">
+      <div class="user-info" style="display:none; background:transparent; border:none; box-shadow:none;">
         <div class="user-avatar"><img src="assets/default-avatar.svg" alt="User avatar"></div>
         <div class="user-details">
           <button class="user-menu-toggle" id="userMenuToggle" aria-haspopup="true" aria-expanded="false">
