fix(ui): ensure username text visible inside user menu button with ellipsis and proper color

--- a/frontend/user.html
+++ b/frontend/user.html
@@ -24,6 +24,7 @@
     .user-menu-toggle:hover { background:rgba(36,49,77,0.85); }
     .user-menu-toggle .caret { color:#aab4d4; font-size:0.8rem; }
     .user-menu-toggle .avatar-inline { width:22px; height:22px; border-radius:50%; background:#0b1220; }
+    .user-menu-toggle .username { display:inline-block; color:#e5e7eb; max-width:160px; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
     .user-dropdown { position:absolute; right:0; top:calc(100% + 8px); background:#0e1424; border:1px solid #2A3A57; border-radius:10px; min-width:160px; box-shadow:0 14px 32px rgba(0,0,0,0.45); padding:8px; z-index:1000; }
     .dropdown-item { display:block; padding:8px 10px; color:#d6def8; text-decoration:none; border-radius:8px; font-size:0.9rem; white-space:nowrap; }
     .dropdown-item:hover { background:#1a2440; }
