fix(ui): scope user info to top nav only (id nav-user-info) to prevent duplicate avatar blocks in page body

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -469,7 +469,7 @@
             <!-- 登录按钮 -->
             <button class="login-btn" onclick="showModal('loginModal')">登录</button>
             <!-- 用户信息显示区域 -->
-            <div class="user-info" style="display: none;">
+            <div class="user-info" id="nav-user-info" style="display: none;">
                 <div class="user-avatar">
                     <img src="assets/default-avatar.svg" alt="User avatar" id="userAvatar">
                 </div>
