feat: 添加Google AdSense广告代码 - 在网站head部分集成AdSense以启用广告收益

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,6 +64,10 @@
   gtag('config', 'G-FYQPWQ1JTM');
 </script>
 
+    <!-- Google AdSense -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6165370615688912"
+     crossorigin="anonymous"></script>
+
     <!-- Microsoft Clarity -->
 <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
