feat: 添加Google AdSense账户验证元标记 - 完善AdSense集成配置

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -65,6 +65,7 @@
 </script>
 
     <!-- Google AdSense -->
+    <meta name="google-adsense-account" content="ca-pub-6165370615688912">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6165370615688912"
      crossorigin="anonymous"></script>
 
