feat: 添加Google登录和忘记密码功能
- 后端：
  * 添加忘记密码和重置密码API接口
  * 添加Google OAuth认证接口
  * 支持重置密码token验证和管理
  * 增强用户认证系统

- 前端：
  * 添加Google登录按钮和UI界面
  * 添加忘记密码和重置密码模态框
  * 更新认证表单处理逻辑
  * 添加Google API集成
  * 新增相关中英文翻译

- 功能特性：
  * 支持Google一键登录
  * 忘记密码邮件重置流程
  * 安全的密码重置token机制
  * 完整的表单验证和错误处理
  * 响应式UI设计

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,6 +64,21 @@
   gtag('config', 'G-FYQPWQ1JTM');
 </script>
 
+    <!-- Google Login API -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script>
+        window.addEventListener('load', () => {
+            if (typeof google !== 'undefined' && google.accounts) {
+                google.accounts.id.initialize({
+                    client_id: '894036062262-j0dso8pgvfgl7ejqu3s3g6pq6d27q9s9.apps.googleusercontent.com', // 替换为您的Google Client ID
+                    callback: window.handleGoogleCredentialResponse,
+                    auto_select: false,
+                    cancel_on_tap_outside: false
+                });
+            }
+        });
+    </script>
+
     <!-- Google AdSense -->
     <meta name="google-adsense-account" content="ca-pub-6165370615688912">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6165370615688912"
