fix: 清理调试日志并修复Google登录配置
- 移除过度详细的i18n调试日志，提升性能
- 更新Google Client ID配置
- 添加FedCM支持以解决CORS问题
- 在wrangler.toml中添加RESET_TOKENS KV绑定
- 简化getNestedI18nValue函数逻辑

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,10 +70,11 @@
         window.addEventListener('load', () => {
             if (typeof google !== 'undefined' && google.accounts) {
                 google.accounts.id.initialize({
-                    client_id: '894036062262-j0dso8pgvfgl7ejqu3s3g6pq6d27q9s9.apps.googleusercontent.com', // 替换为您的Google Client ID
+                    client_id: '894036062262-8h0btc9vnrp4tj9v1gm8ljvj6b6d2m7i.apps.googleusercontent.com', // AISTONE的Google Client ID
                     callback: window.handleGoogleCredentialResponse,
                     auto_select: false,
-                    cancel_on_tap_outside: false
+                    cancel_on_tap_outside: false,
+                    use_fedcm_for_prompt: true
                 });
             }
         });
