--- a/frontend/auth-modals.html
+++ b/frontend/auth-modals.html
@@ -19,14 +19,14 @@
                     <button type="submit" class="btn btn-primary" data-i18n="login">登录</button>
                 </div>
                 
-                <!-- Google登录分隔线 -->
-                <div class="divider">
+                <!-- Google登录分隔线 - 暂时隐藏 -->
+                <div class="divider" style="display: none;">
                     <span data-i18n="or">或</span>
                 </div>
                 
-                <!-- Google登录按钮 -->
-                <div class="form-group">
-                    <button type="button" id="googleLoginBtn" class="btn btn-google">
+                <!-- Google登录按钮 - 暂时禁用 -->
+                <div class="form-group" style="display: none;">
+                    <button type="button" id="googleLoginBtn" class="btn btn-google" style="display: none;">
                         <svg width="20" height="20" viewBox="0 0 24 24">
                             <path fill="#4285F4" d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"/>
                             <path fill="#34A853" d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"/>
