feat: 重新启用Google登录功能
- 重新启用Google登录API加载和初始化
- 移除FedCM配置以避免相关错误
- 改进网络检测机制，只在Google服务可用时显示登录按钮
- 恢复完整的Google登录处理和回调函数
- 提供更好的错误处理和用户提示

--- a/frontend/auth-modals.html
+++ b/frontend/auth-modals.html
@@ -19,12 +19,12 @@
                     <button type="submit" class="btn btn-primary" data-i18n="login">登录</button>
                 </div>
                 
-                <!-- Google登录分隔线 - 暂时隐藏 -->
+                <!-- Google登录分隔线 -->
                 <div class="divider" style="display: none;">
                     <span data-i18n="or">或</span>
                 </div>
                 
-                <!-- Google登录按钮 - 暂时禁用 -->
+                <!-- Google登录按钮 -->
                 <div class="form-group" style="display: none;">
                     <button type="button" id="googleLoginBtn" class="btn btn-google" style="display: none;">
                         <svg width="20" height="20" viewBox="0 0 24 24">
